@@ -62,9 +62,9 @@ func (dDP *dynamicDP) RemoteHost() net.Addr {
 }
 
 var initialDPPrefixes = utils.NewStringSet([]string{utils.MetaReq, utils.MetaVars,
-	utils.MetaCgreq, utils.MetaCgrep, utils.MetaRep, utils.MetaCGRAReq,
+	utils.MetaCgreq, utils.MetaCgrep, utils.MetaRep,
 	utils.MetaAct, utils.MetaEC, utils.MetaUCH, utils.MetaOpts,
-	utils.MetaHdr, utils.MetaTrl})
+	utils.MetaHdr, utils.MetaTrl, utils.MetaCfg})
 
 func (dDP *dynamicDP) FieldAsInterface(fldPath []string) (val interface{}, err error) {
 	if len(fldPath) == 0 {
